it will have a button that submits a number

--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
     <title>Ping Pong Code Review</title>
   </head>
   <body>
-    <h1>Ping Pong Code Review</h1>
+    <div class="container">
+      <h1>Ping Pong Code Review</h1>
+      <form id="thetest">
+        <label for="numberinput">Give me a number!</label>
+        <input id="numberinput" class="form-control" type="text">
+        <button type="submit" class="btn">send me the number</button>
+      </form>
+
+    </div>
   </body>
 </html>
